--- a/index.html
+++ b/index.html
@@ -9,46 +9,98 @@
   <script defer src="script.js"></script>
   <style>
     body {
-      background-color: black;
+      background-color: #fff;
       padding: 0;
       margin: 0;
       display: flex;
+      flex-direction: column;
       justify-content: center;
+      align-items: center;
+      font-family: Arial, sans-serif;
+      height: 100vh;
+      overflow: hidden;
     }
 
     #message-container {
-      width: 80%;
+      width: 100%;
       max-width: 1200px;
+      flex-grow: 1;
+      overflow-y: auto;
+      padding: 10px;
+      box-sizing: border-box;
+      background-color: #f0f0f0;
     }
 
     #message-container div {
-      background-color: #CCC;
-      padding: 5px;
+      background-color: #ccc;
+      padding: 10px;
+      margin: 5px 0;
+      border-radius: 5px;
     }
 
     #message-container div:nth-child(2n) {
-      background-color: #FFF;
+      background-color: #fff;
     }
 
     #send-container {
-      position: fixed;
-      padding-bottom: 30px;
-      bottom: 0;
-      background-color: white;
+      width: 100%;
       max-width: 1200px;
-      width: 80%;
+      background-color: #fff;
       display: flex;
+      padding: 10px;
+      box-sizing: border-box;
+      border-top: 1px solid #ccc;
     }
 
     #message-input {
       flex-grow: 1;
+      padding: 10px;
+      font-size: 16px;
+      border: 1px solid #ccc;
+      border-radius: 5px;
+      margin-right: 10px;
+    }
+
+    #send-button {
+      padding: 10px 20px;
+      font-size: 16px;
+      background-color: #007bff;
+      color: white;
+      border: none;
+      border-radius: 5px;
+      cursor: pointer;
+    }
+
+    #send-button:hover {
+      background-color: #0056b3;
+    }
+
+    @media (max-width: 768px) {
+      #message-container {
+        width: 90%;
+      }
+
+      #send-container {
+        width: 90%;
+        flex-direction: column;
+        align-items: stretch;
+      }
+
+      #message-input {
+        margin-bottom: 10px;
+        margin-right: 0;
+      }
+
+      #send-button {
+        width: 100%;
+      }
     }
   </style>
 </head>
 <body>
   <div id="message-container"></div>
   <form id="send-container">
-    <input type="text" id="message-input">
+    <input type="text" id="message-input" placeholder="Type your message...">
     <button type="submit" id="send-button">Send</button>
   </form>
 </body>
